tests/negative/test_switch_multi_else.orb
fnc main() {
    switch (1) {
    else:
    else:
    }
}